2006-04-03  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* ui/devhelp.glade: Add keyboard mnemonics in preferences
	dialog (bug #336112, Wouter Bolsterlee)

2006-03-30  Richard Hult  <richard@imendio.com>

	* misc/gedit-plugin/devhelp/: Make it actually work.

2006-03-29  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (message_received_cb): Fix typo.
	
	* configure.in:
	* misc/Makefile.am:
	* misc/gedit-plugin: Add very simple gedit plugin for devhelp.

2006-03-26  Behdad Esfahbod  <behdad@gnome.org>

	* ui/Makefile.am: Respect DESTDIR.

2006-03-18  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Substitute GECKO_EXTRA_LIBS.
	Fixes the build with firefox trunk.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	Bug #332560.

	* Makefile.am: Fix builddir != srcdir build.
	* m4/gecko.m4: Sync gecko.m4 with Epiphany.
	* configure.in:
	* src/Makefile.am:
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h: Support xulrunner trunk.
	* src/dh-base.c: (dh_base_finalize), (base_class_init),
	(dh_base_new): Shut gecko down in dh_base_finalize.
	* src/dh-main.c: (main): Fix refcount leak so we can
	successfully shut down.
	* src/dh-window.c: (window_finalize): Unref the DhBase
	in finalize, to make shutdown work correctly.

2006-02-18  Behdad Esfahbod  <behdad@gnome.org>

	* ui/Makefile.am: Pass -f to gtk-update-icon-cache, as it's rather
	crazy.

2006-02-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/dh-preferences.c: (dh_preferences_init): Use SHAREDIR here too.

2006-02-18  Christian Persch  <chpe@cvs.gnome.org>

	Open external links in the web browser, not in devhelp. Bug #329928,
	also fixes bug #324471.

	* configure.in: Use AC_CONFIG_FILES.
	* src/.cvsignore: Updated.
	* src/Makefile.am: Build prefs.js file. Simplify defines.
	* src/default-prefs-common.js: Common prefs.
	* src/default-prefs-gecko-1-8.js: Gecko 1.8 specific prefs.