@@ -6,7 +6,7 @@ libgnomeui_serverdir=@libexecdir@
 
 Name: devhelp
 Description: devhelp
-Requires: libgnomeui-2.0 gtk+-2.0 gnome-vfs-2.0
+Requires: libgnomeui-2.0 gtk+-2.0 gnome-vfs-2.0 libwnck-1.0
 Version: @VERSION@
 Libs: -L${libdir} -ldevhelp-1
 Cflags: -I${includedir}/devhelp-1.0
