@@ -20,7 +20,6 @@
 #    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 import gedit
-
 from devhelp import DevhelpInstance
 
 class DevhelpPlugin(gedit.Plugin):
